unleash-abstract-classes/src/main/java/de/test/domain/fails/FeatureFailNew.java
package de.test.domain.fails;

import org.springframework.stereotype.Service;

@Service("NewFeatureFail")
public class FeatureFailNew extends FeatureFailCommon {
    @Override
    public String greetings() {
        return "Hello from the new fail World!";
    }
}
